Fix spacing loss on left side grid when displaying the HeaderRowOverlay the lefthand side of the DataGrid lost its extra spacing, due to a CSS selector losing its validity

--- a/components/datagrid/HeaderRowOverlay/theme.css
+++ b/components/datagrid/HeaderRowOverlay/theme.css
@@ -9,14 +9,14 @@
   z-index: 3;
 
   &.data-grid-checkbox-size-small {
-    left: 48px;
+    left: 60px;
   }
 
   &.data-grid-checkbox-size-medium {
-    left: 51px;
+    left: 63px;
   }
 
   &.data-grid-checkbox-size-large {
-    left: 54px;
+    left: 66px;
   }
 }
